	file directive'exportClassPattern' which has the same syntax
	as 'exportPattern'.

    o	strftime() now converts its first argment with as.POSIXlt()
	and so is no longer an alias for format.POSIXLt.

    o	install.packages() now checks >= version dependencies for
	dependent packages, and so will install a newer version of a
	dependency if needed and available on the repositories.

    o	body<-() now treats list values consistently with other
	types: they no longer need to be wrapped in a list() call.

    o	option("pdfbrowser") is now set on Windows as well as on Unix-alikes.

    o	object.size() now returns an object of class "object_size" and
    	has a print() method.

    o	[col/row]Sums(), *Means() now have an additional '...' argument,
	so that they can more easily be turned into generic functions.

    o	Package 'tools' contains dependsOnPkgs() to compute reverse
	dependencies.


DEPRECATED & DEFUNCT

    o	allGenerics() is defunct.

    o	Use of allocVector(CHARSXP ...) is defunct and gives an error.

    o	The compatibility define for graphics structure NewDevDesc in
	GraphicsDevice.h has been removed.

    o	Support for versioned installs (R CMD INSTALL --with-package-versions
	and install.packages(installWithVers = TRUE)) has been removed.

    o	The numeric and power(0.5) forms of argument to make.link()
	which were deprecated in 2.4.0 are now defunct: use power()
	directly.

    o	Conversion to Sd and Ssgm by R CMD Rdconv is now defunct.	


UTILITIES

    o	R CMD build now also uses a Makevars[.win] file for cleaning
	up src/.

    o	R CMD Rd2dvi and R CMD check are now able to cope with Cyrillic
    	characters in UTF-8 (thanks to a hint from Alexey Shipunov).

    o   New function rtags() in package 'utils' that provides etags-like
	indexing capabilities for R code files.

    o	New environment variable R_TEXI2DVICMD to hold the path (if any)
	to 'texi2dvi' found at configure time: this now provides the
	default to option("texi2dvi").
