@@ -141,8 +141,6 @@
     }
 
     if(!length(pkgs)) return(invisible())
-    oneLib <- length(lib) == 1L
-
 
     ## look for packages/bundles in use.
     pkgnames <- basename(pkgs)
@@ -191,7 +189,7 @@
     if(is.null(available))
         available <- available.packages(contriburl = contriburl,
                                         method = method)
-    pkgs <- getDependencies(pkgs, dependencies, available, oneLib)
+    pkgs <- getDependencies(pkgs, dependencies, available, lib)
 
     foundpkgs <- download.packages(pkgs, destdir = tmpd, available = available,
                                    contriburl = contriburl, method = method,
